[project]
name = "rg-forms"
version = "0.1.0"
description = "Reactive Django forms with Datastar integration - declarative field visibility, dependencies, computed fields"
readme = "README.md"
authors = [
    { name = "Oleksii Koval", email = "alex@koval.kharkov.ua" },
]
maintainers = [
    { name = "Raccoon Gang", email = "contact@raccoongang.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "forms", "reactive", "datastar", "htmx"]
dependencies = [
    "datastar-py>=0.8.0",
    "django>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs>=1.6",
]
all = [
    "rg-forms[dev]",
    "rg-forms[docs]",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "DJ"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["examples/"]

[project.urls]
Homepage = "https://github.com/raccoongang/rg.forms"
Documentation = "https://raccoongang.github.io/rg.forms"
Repository = "https://github.com/raccoongang/rg.forms"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["examples/", "docs/"]

[tool.hatch.build.targets.wheel]
packages = ["src/rg"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"
